# sharia-screener

./: .env.example  .gitignore  generate_visuals.py  main.py  pyproject.toml  readme.md
data/: AAPL_raw.json  MSFT_raw.json  TSLA_raw.json
src/collection/: collector.py
src/mcp_server/: server.py
src/mcp_server/tools/: admin_tools.py  query_tools.py  screen_tools.py
src/pipeline/: screener.py
src/processing/: qual_engine.py  quant_engine.py
src/storage/: db_handler.py  vector_handler.py
tests/: test_mcp_tools.py  test_qual.py  test_quant.py
